--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -11,3 +11,17 @@
 @mixin heading-font {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+@mixin intro-heading-font {
+  line-height: normal; 
+  font-family: 'Bahianita', cursive; 
+  font-size: 124px; 
+  color: rgba(255,255,255, .35); 
+  text-transform: uppercase;
+}
+@mixin intro-secondary-heading-font {
+  line-height: normal; 
+  font-family: 'New Rocker', cursive; 
+  font-size:36px; 
+  color: rgba(255,255,255, .35);
+  text-transform: uppercase;
+}
