--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -1,50 +1,92 @@
 // Styling for the masthead
 header.masthead {
+  position: relative;
+  color: $white;
   text-align: center;
-  color: white;
   background-image: url('../img/header-bg.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
   .intro-text {
+    position: absolute;
+    z-index: 3;
     padding-top: 150px;
     padding-bottom: 100px;
     .intro-lead-in {
+      margin-bottom: 25px;
       font-size: 22px;
       font-style: italic;
       line-height: 22px;
-      margin-bottom: 25px;
       @include serif-font;
     }
     .intro-heading {
+      margin-bottom: 25px;
       font-size: 50px;
       font-weight: 700;
       line-height: 50px;
-      margin-bottom: 25px;
       @include heading-font;
     }
   }
 }
-@media(min-width:768px) {
+@media (min-width: 768px) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
-      padding-bottom: 200px;
+      padding-top: 200px;
+      padding-bottom: 100px;
       .intro-lead-in {
-        font-size: 40px;
-        font-style: italic;
-        line-height: 40px;
-        margin-bottom: 25px;
-        @include serif-font;
+        @include intro-secondary-heading-font;
       }
       .intro-heading {
-        font-size: 75px;
-        font-weight: 700;
-        line-height: 75px;
-        margin-bottom: 50px;
-        @include heading-font;
+        @include intro-heading-font;
       }
     }
   }
 }
+.nav-item {
+  &::before {
+    position: absolute;
+    right: 9px;
+    bottom: 12px;
+    display: block;
+    width: 2px;
+    height: 2px;
+    content: "";
+    background-color: #ca9e2a;
+  }
+  .nav-link {
+    text-transform: lowercase;
+  }
+}
+#mainNav.navbar {
+  padding-bottom: 30px;
+  background: -moz-linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr="#000000", endColorstr="#000000", GradientType=1);
+}
+
+#video-background.vid-bg {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  width: auto;
+  min-width: 100%;
+  height: auto;
+  min-height: 100%;
+}
+
+.vid-overlay {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  width: auto;
+  min-width: 100%;
+  height: auto;
+  min-height: 100%;
+  background: rgba(0, 0, 0, .75);
+}
+
+
