--- a/css/crankfish.css
+++ b/css/crankfish.css
@@ -38,6 +38,18 @@ h6 {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+.btn-secondary {
+  background: rgba(0, 0, 0, 0.15);
+  border: 3px solid rgba(255, 255, 255, 0.15);
+  padding: .5rem 1.2rem !important;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.btn-secondary:hover {
+  background: rgba(254, 200, 16, 0.29);
+  border: 3px solid rgba(254, 200, 16, 0.353);
+}
+
 .page-section {
   padding: 100px 0;
 }
