--- a/scss/base/_page.scss
+++ b/scss/base/_page.scss
@@ -30,7 +30,16 @@ h6 {
   font-weight: 700;
   @include heading-font;
 }
-
+.btn-secondary {
+  background: rgba(0, 0, 0, .15);
+  border: 3px solid rgba(255, 255, 255, .15);
+  padding: .5rem 1.2rem !important;
+  color: rgba(255, 255, 255, .5);
+  &:hover {
+    background: rgba(254, 200, 16, .29);
+    border: 3px solid rgba(254, 200, 16, .353);
+  }
+}
 
 
 .page-section {
