--- a/scss/crankfish.scss
+++ b/scss/crankfish.scss
@@ -8,6 +8,7 @@
 // Components
 @import "components/buttons.scss";
 @import "components/navbar.scss";
+@import "components/player.scss";
 
 // Layout
 @import "layout/masthead.scss";
@@ -17,3 +18,4 @@
 @import "layout/team.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
+
