--- a/components/audioplayer/index.html
+++ b/components/audioplayer/index.html
@@ -17,7 +17,66 @@
 
     <!-- Include font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i" rel="stylesheet">
+      
+<script id="rendered-js">
+  Amplitude.init({
+    "songs": [{
+        "name": "Represent",
+        "artist": "Crankfish",
+        "album": "Red Swallow",
+        "url": "/audioStream/eMastered_Roland.mp3",
+        "cover_art_url": "img/cf-cd-cover-2002.jpg"
+      },
+      {
+        "name": "Walk with Roland",
+        "artist": "Crankfish",
+        "album": "Red Swallow",
+        "url": "/audioStream/eMastered_Roland.mp3",
+        "cover_art_url": "img/cf-cd-cover-2002.jpg"
+      },
+      {
+        "name": "King Pin",
+        "artist": "Crankfish",
+        "album": "Red Swallow",
+        "url": "/audioStream/King_Pin.mp3",
+        "cover_art_url": "img/cf-cd-cover-2002.jpg"
+      },
+      {
+        "name": "Syllable",
+        "artist": "Crankfish",
+        "album": "Red Swallow",
+        "url": "/audioStream/eMastered_Syllable.mp3",
+        "cover_art_url": "img/cf-cd-cover-2002.jpg"
+      },
+      {
+        "name": "Red Swallow",
+        "artist": "Crankfish",
+        "album": "Red Swallow",
+        "url": "/audioStream/eMastered_Red_swallow.mp3",
+        "cover_art_url": "img/cf-cd-cover-2002.jpg"
+      }
 
+    ]
+  });
+
+  document.getElementById('song-played-progress-1')
+    .addEventListener('click', function (e) {
+      if (Amplitude.getActiveIndex() == 0) {
+        var offset = this.getBoundingClientRect();
+        var x = e.pageX - offset.left;
+        Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
+      }
+    });
+  document.getElementById('song-played-progress-2')
+    .addEventListener('click', function (e) {
+      if (Amplitude.getActiveIndex() == 1) {
+        var offset = this.getBoundingClientRect();
+        var x = e.pageX - offset.left;
+        Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
+      }
+    });
+</script>
+    
   </head>
   <body>
     <!-- <script>
@@ -74,69 +133,7 @@
     </div>
   </div>
     
-    <script id="rendered-js">
-      Amplitude.init({
-        "songs": [
-          {
-            "name": "Represent",
-            "artist": "Crankfish",
-            "album": "Red Swallow",
-            "url": "/music/eMastered_Represent.mp3",
-            "cover_art_url": "img/cf-cd-cover-2002.jpg" 
-          },
-          {
-            "name": "Walk with Roland",
-            "artist": "Crankfish",
-            "album": "Red Swallow",
-            "url": "/music/eMastered_Roland.mp3",
-            "cover_art_url": "img/cf-cd-cover-2002.jpg" 
-          },
-          {
-            "name": "King Pin",
-            "artist": "Crankfish",
-            "album": "Red Swallow",
-            "url": "/music/King_Pin.mp3",
-            "cover_art_url": "img/cf-cd-cover-2002.jpg" 
-          },
-          {
-            "name": "Syllable",
-            "artist": "Crankfish",
-            "album": "Red Swallow",
-            "url": "/music/eMastered_Syllable.mp3",
-            "cover_art_url": "img/cf-cd-cover-2002.jpg" 
-          },
-          {
-            "name": "Red Swallow",
-            "artist": "Crankfish",
-            "album": "Red Swallow",
-            "url": "/music/eMastered_Red_swallow.mp3",
-            "cover_art_url": "img/cf-cd-cover-2002.jpg" 
-          }
-        
-        ] });
-      
-      
-      
-      
-      document.getElementById('song-played-progress-1').addEventListener('click', function (e) {
-        if (Amplitude.getActiveIndex() == 0) {
-          var offset = this.getBoundingClientRect();
-          var x = e.pageX - offset.left;
-      
-          Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
-        }
-      });
-      
-      document.getElementById('song-played-progress-2').addEventListener('click', function (e) {
-        if (Amplitude.getActiveIndex() == 1) {
-          var offset = this.getBoundingClientRect();
-          var x = e.pageX - offset.left;
-      
-          Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
-        }
-      });
-      
-          </script>
+   
   </body>
 </html>
 
@@ -173,11 +170,11 @@
     <div class="player-content">
       <audio preload></audio>
       <ol class="playlist">
-        <li><a href="#" data-src="/music/eMastered_Represent.mp3">Represent</a></li>
-        <li><a href="#" data-src="/music/eMastered_Roland.mp3">Walk with Roland</a></li>
-        <li><a href="#" data-src="/music/King_Pin.mp3">King Pin</a></li>
-        <li><a href="#" data-src="/music/eMastered_Syllable.mp3">Syllable</a></li>
-        <li><a href="#" data-src="/music/eMastered_Red_swallow.mp3">Red Swallow</a></li>
+        <li><a href="#" data-src="/audioStream/eMastered_Represent.mp3">Represent</a></li>
+        <li><a href="#" data-src="/audioStream/eMastered_Roland.mp3">Walk with Roland</a></li>
+        <li><a href="#" data-src="/audioStream/King_Pin.mp3">King Pin</a></li>
+        <li><a href="#" data-src="/audioStream/eMastered_Syllable.mp3">Syllable</a></li>
+        <li><a href="#" data-src="/audioStream/eMastered_Red_swallow.mp3">Red Swallow</a></li>
       </ol>
       <div class="nextprev">
         <span class="prev">prev</span>
