more audio and video coding

--- a/components/audioplayer/index.html
+++ b/components/audioplayer/index.html
@@ -97,15 +97,21 @@
     
       <div class="meta-container">
         <div class="control-container">
-          <div class="amplitude-prev">
-
-          </div>
+          <div class="amplitude-prev"></div>
           <div class="play-pause-contianer hvr-rectangle-out">
             <div class="amplitude-play-pause" data-amplitude-song-index="0">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="" width="32" height="32" viewBox="0 0 24 24">
+                <title>play-arrow</title>
+                <path fill="#ffffff" d="M6.516 5.016l10.969 6.984-10.969 6.984v-13.969z"></path>
+              </svg>
+  
           </div>
           </div>
           <div class="amplitude-next">
-
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <title>skip-next</title>
+              <path fill="#ffffff" d="M15.984 6h2.016v12h-2.016v-12zM6 18v-12l8.484 6z"></path>
+            </svg>
           </div>
         </div>
         <div class="time-container">
