--- a/css/crankfish.css
+++ b/css/crankfish.css
@@ -3796,10 +3796,10 @@ td.hljs-ln-numbers {
 }
 
 .player-container {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 99;
   bottom: 0;
   box-sizing: border-box;
   display: flex;
@@ -3864,8 +3864,8 @@ div.player .album-art-container div.song-artist {
 
 div.player img.album-art {
   display: inline-flex;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   margin-right: 10px;
 }
 
@@ -3899,7 +3899,7 @@ div.meta-container div.song-artist {
 
 div.meta-container div.time-container {
   position: absolute;
-  top: 30px;
+  top: 20px;
   right: 0px;
   display: inline-flex;
   height: 16px;
@@ -3938,19 +3938,17 @@ div.control-container div.amplitude-prev {
   height: 24px;
   vertical-align: middle;
   cursor: pointer;
-  background: url("/img/icons/skip-previous.svg");
-  background-repeat: no-repeat;
 }
 
 div.control-container div.play-pause-contianer {
-  display: inline-block;
+  display: inline-flex;
   width: 40px;
   height: 40px;
   padding: .4rem;
   vertical-align: middle;
   cursor: pointer;
   background: #3d3d3d;
-  background: radial-gradient(circle, #3d3d3d 0%, black 100%);
+  background: radial-gradient(circle, #3d3d3d 20%, black 100%);
   -webkit-filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#000000", GradientType=1);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#000000", GradientType=1);
   border-radius: 50%;
@@ -3965,25 +3963,33 @@ div.control-container div.play-pause-contianer:hover {
   transition: all 1s ease-in-out;
 }
 
+div.control-container div.play-pause-contianer .play-icon-offset {
+  margin-left: -2px;
+  margin-top: -2px;
+}
+
 div.control-container div.amplitude-play-pause {
   display: inline-block;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-items: center;
   width: 40px;
-  height: 40px;
+  height: 450px;
+  margin: 0 auto;
   vertical-align: middle;
+  text-align: center;
+  /*background: url("/img/icons/play-arrow.svg");
+        background-repeat: no-repeat;
+        background-position: 50% 50%*/
   cursor: pointer;
 }
 
 div.control-container div.amplitude-play-pause.amplitude-paused {
   margin-left: 3px;
-  background: url("/img/icons/play-arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center middle;
-  background-size: 40px;
-}
-
-div.control-container div.amplitude-play-pause.amplitude-playing {
-  background: url("/img/icons/pause.svg");
-  background-repeat: no-repeat;
+  /*background: url("/img/icons/play-arrow.svg");
+          background-repeat: no-repeat;
+          background-position: center middle;
+          background-size: 40px;*/
 }
 
 div.control-container div.amplitude-next {
@@ -3992,7 +3998,6 @@ div.control-container div.amplitude-next {
   height: 24px;
   vertical-align: middle;
   cursor: pointer;
-  background: url("/img/icons/skip-next.svg");
 }
 
 /*
@@ -4073,7 +4078,7 @@ body div#preload {
 }
 
 body {
-  background: #eaecfa;
+  background: #000;
 }
 
 .loader {
@@ -4157,37 +4162,61 @@ body {
   user-select: none;
   z-index: 2000;
   position: fixed;
+  height: 90px;
+  width: 90px;
   margin: auto;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  height: 5px;
-  width: 200px;
-  background: #fff;
-  border: 1px solid #29d;
-  overflow: hidden;
 }
 
-.pace .pace-progress {
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  transform: translate3d(0, 0, 0);
-  max-width: 200px;
+.pace.pace-inactive .pace-activity {
+  display: none;
+}
+
+.pace .pace-activity {
   position: fixed;
   z-index: 2000;
   display: block;
   position: absolute;
-  top: 0;
-  right: 100%;
-  height: 100%;
-  width: 100%;
-  background: #29d;
+  left: -30px;
+  top: -30px;
+  height: 90px;
+  width: 90px;
+  display: block;
+  border-width: 30px;
+  border-style: double;
+  border-color: #b30004 transparent transparent;
+  border-radius: 50%;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
-.pace.pace-inactive {
-  display: none;
+.pace .pace-activity:before {
+  content: ' ';
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 50px;
+  width: 50px;
+  display: block;
+  border-width: 10px;
+  border-style: solid;
+  border-color: #b30004 transparent transparent;
+  border-radius: 50%;
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(359deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(359deg);
+  }
 }
 
 header.masthead {
@@ -4206,7 +4235,7 @@ header.masthead .intro-text {
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 100;
+  z-index: 50;
   padding-top: 250px;
   padding-bottom: 100px;
   width: 100%;
