--- a/scss/components/_loader-pace.scss
+++ b/scss/components/_loader-pace.scss
@@ -1,44 +1,124 @@
+// .pace {
+// 	-webkit-pointer-events: none;
+// 	pointer-events: none;
+// 	-webkit-user-select: none;
+// 	-moz-user-select: none;
+// 	user-select: none;
+// 	z-index: 2000;
+// 	position: fixed;
+// 	margin: auto;
+// 	top: 0;
+// 	left: 0;
+// 	right: 0;
+// 	bottom: 0;
+// 	height: 5px;
+// 	width: 200px;
+// 	background: #333;
+// 	border: 1px solid #b30004;
+// 	overflow: hidden;
+// 	.pace-progress {
+// 		-webkit-box-sizing: border-box;
+// 		-moz-box-sizing: border-box;
+// 		-ms-box-sizing: border-box;
+// 		-o-box-sizing: border-box;
+// 		box-sizing: border-box;
+// 		-webkit-transform: translate3d(0, 0, 0);
+// 		-moz-transform: translate3d(0, 0, 0);
+// 		-ms-transform: translate3d(0, 0, 0);
+// 		-o-transform: translate3d(0, 0, 0);
+// 		transform: translate3d(0, 0, 0);
+// 		max-width: 200px;
+// 		position: fixed;
+// 		z-index: 2000;
+// 		display: block;
+// 		position: absolute;
+// 		top: 0;
+// 		right: 100%;
+// 		height: 100%;
+// 		width: 100%;
+// 		background: #29d;
+// 	}
+// }
+// .pace.pace-inactive {
+// 	display: none;
+// }
+
+// scenter radar
 .pace {
-	-webkit-pointer-events: none;
-	pointer-events: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	z-index: 2000;
-	position: fixed;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	height: 5px;
-	width: 200px;
-	background: #fff;
-	border: 1px solid #29d;
-	overflow: hidden;
-	.pace-progress {
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-o-box-sizing: border-box;
-		box-sizing: border-box;
-		-webkit-transform: translate3d(0, 0, 0);
-		-moz-transform: translate3d(0, 0, 0);
-		-ms-transform: translate3d(0, 0, 0);
-		-o-transform: translate3d(0, 0, 0);
-		transform: translate3d(0, 0, 0);
-		max-width: 200px;
-		position: fixed;
-		z-index: 2000;
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 100%;
-		height: 100%;
-		width: 100%;
-		background: #29d;
-	}
+  -webkit-pointer-events: none;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  z-index: 2000;
+  position: fixed;
+  height: 90px;
+  width: 90px;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  &.pace-inactive .pace-activity {
+   display: none;
+  }
+
+  .pace-activity {
+    position: fixed;
+    z-index: 2000;
+    display: block;
+    position: absolute;
+    left: -30px;
+    top: -30px;
+    height: 90px;
+    width: 90px;
+    display: block;
+    border-width: 30px;
+    border-style: double;
+    border-color: #b30004 transparent transparent;
+    border-radius: 50%;
+    -webkit-animation: spin 1s linear infinite;
+    -moz-animation: spin 1s linear infinite;
+    -o-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+
+    &:before {
+      content: ' ';
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      height: 50px;
+      width: 50px;
+      display: block;
+      border-width: 10px;
+      border-style: solid;
+      border-color: #b30004 transparent transparent;
+      border-radius: 50%;
+    }
+  }
 }
-.pace.pace-inactive {
-	display: none;
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(359deg);
+  }
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(359deg);
+  }
+}
+
+@-o-keyframes spin {
+  100% {
+    -moz-transform: rotate(359deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(359deg);
+  }
 }
