--- a/components/audioplayer-2/index.html
+++ b/components/audioplayer-2/index.html
@@ -15,9 +15,10 @@
     <div class="player">
       <img src="/img/cf-cd-cover-2002.jpg" class="album-art"/>
       <div class="meta-container">
-        <div id="songTitle" class="song-title"><span amplitude-song-info="name" amplitude-main-song-info="true" class="song-name"></span></div>
-        <div id="songArtist"class="song-artist"><span amplitude-song-info="artist" amplitude-main-song-info="true" class="song-artist"></span></div>
-          
+        <div class="songinfo">
+          <div id="songTitle" class="song-title"><span data-amplitude-song-info="name" data-amplitude-main-song-info="true" class="song-name"></span></div>
+          <div id="songArtist"class="song-artist"><span data-amplitude-song-info="artist" data-amplitude-main-song-info="true" class="song-artist"></span></div>
+         </div>
           
         <div class="time-container">
           <div class="current-time">
