--- a/components/audioplayer/index.html
+++ b/components/audioplayer/index.html
@@ -12,106 +12,32 @@
     <link href="https://fonts.googleapis.com/css?family=Bahianita|New+Rocker|OswaldRoboto:300,400,700&display=swap" rel="stylesheet">
   
     <!-- Custom styles for this template -->
+    <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/css/crankfish.min.css" rel="stylesheet">
   
-
     <!-- Include font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i" rel="stylesheet">
       
-<script id="rendered-js">
-  Amplitude.init({
-    "songs": [{
-        "name": "Represent",
-        "artist": "Crankfish",
-        "album": "Red Swallow",
-        "url": "/audioStream/eMastered_Roland.mp3",
-        "cover_art_url": "img/cf-cd-cover-2002.jpg"
-      },
-      {
-        "name": "Walk with Roland",
-        "artist": "Crankfish",
-        "album": "Red Swallow",
-        "url": "/audioStream/eMastered_Roland.mp3",
-        "cover_art_url": "img/cf-cd-cover-2002.jpg"
-      },
-      {
-        "name": "King Pin",
-        "artist": "Crankfish",
-        "album": "Red Swallow",
-        "url": "/audioStream/King_Pin.mp3",
-        "cover_art_url": "img/cf-cd-cover-2002.jpg"
-      },
-      {
-        "name": "Syllable",
-        "artist": "Crankfish",
-        "album": "Red Swallow",
-        "url": "/audioStream/eMastered_Syllable.mp3",
-        "cover_art_url": "img/cf-cd-cover-2002.jpg"
-      },
-      {
-        "name": "Red Swallow",
-        "artist": "Crankfish",
-        "album": "Red Swallow",
-        "url": "/audioStream/eMastered_Red_swallow.mp3",
-        "cover_art_url": "img/cf-cd-cover-2002.jpg"
-      }
-
-    ]
-  });
-
-  document.getElementById('song-played-progress-1')
-    .addEventListener('click', function (e) {
-      if (Amplitude.getActiveIndex() == 0) {
-        var offset = this.getBoundingClientRect();
-        var x = e.pageX - offset.left;
-        Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
-      }
-    });
-  document.getElementById('song-played-progress-2')
-    .addEventListener('click', function (e) {
-      if (Amplitude.getActiveIndex() == 1) {
-        var offset = this.getBoundingClientRect();
-        var x = e.pageX - offset.left;
-        Amplitude.setSongPlayedPercentage(parseFloat(x) / parseFloat(this.offsetWidth) * 100);
-      }
-    });
-</script>
-    
   </head>
   <body>
-    <!-- <script>
-      $(document).ready((){
-         $(BODY).load('/components/audioplayer/player.html')
-      });
-     </script> -->
+
     <div class="player-container container-fluid">
     <div class="player ">
       <div class="album-art-container">
         <img src="/img/cf-cd-cover-2002.jpg" class="album-art"/>
-        <div class="song-title">Represent <sup class="number">#1</sup></divv>
-        <div class="song-artist">Crankfish</div>
-       </div>
-    </div>
-    
-    
-    
-      <div class="meta-container">
-        <div class="control-container">
+        </div>
+        <div class="meta-container">
+          <div class="title-artist-container">
+            <div id="songTitle" class="song-title"><span data-amplitude-song-info="name" data-amplitude-main-song-info="true" class="song-name"></span></div>
+            <div id="songArtist" class="song-artist"><span data-amplitude-song-info="artist" data-amplitude-main-song-info="true" class="song-artist"></span></div>
+          </div>
+          <div class="control-container">
           <div class="amplitude-prev"></div>
           <div class="play-pause-contianer hvr-rectangle-out">
             <div class="amplitude-play-pause" data-amplitude-song-index="0">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="" width="32" height="32" viewBox="0 0 24 24">
-                <title>play-arrow</title>
-                <path fill="#ffffff" d="M6.516 5.016l10.969 6.984-10.969 6.984v-13.969z"></path>
-              </svg>
-  
           </div>
           </div>
           <div class="amplitude-next">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <title>skip-next</title>
-              <path fill="#ffffff" d="M15.984 6h2.016v12h-2.016v-12zM6 18v-12l8.484 6z"></path>
-            </svg>
           </div>
         </div>
         <div class="time-container">
@@ -127,106 +53,20 @@
         <progress class="amplitude-song-played-progress" data-amplitude-song-index="0" id="song-played-progress-1"></progress>
         
         
-      </div>
-    </div>
-    
-    <div id="preload">
-     <div id="preload">
-      <img src="/img/icons/skip-previous.svg"/>
-      <img src="/img/icons/play-arrow.svg"/>
-      <img src="/img/icons/pause.svg"/>
-      <img src="/img/icons/skip-next.svg"/>
     </div>
   </div>
+  
+  
+  <div id="preload">
+    <img src="/img/icons/previous.svg"/>
+    <img src="/img/icons/play.svg"/>
+    <img src="/img/icons/pause.svg"/>
+    <img src="/img/icons/next.svg"/>
+  </div>
+ 
+  <script src="/components/audioplayer/js/functions.js"></script>
     
+   <!--==================================================================================-->
    
   </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Droid+Serif:400,700,400italic,700italic&display=swap' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Bahianita|New+Rocker|OswaldRoboto:300,400,700&display=swap" rel="stylesheet">
-
-  <link href="css/crankfish.min.css" rel="stylesheet">
-
-</head>
-
-<body id="page-top">
-  
-<div class="player horizontal">
-  <div class="container">
-    <div class="info-album-player">
-      <div class="album-cover" id="bg-image3"></div>
-      <p class="album-title">Spectrum</p>
-      <p class="artist-name">Album by Blummsday</p>
-    </div>
-    <div class="player-content">
-      <audio preload></audio>
-      <ol class="playlist">
-        <li><a href="#" data-src="/audioStream/eMastered_Represent.mp3">Represent</a></li>
-        <li><a href="#" data-src="/audioStream/eMastered_Roland.mp3">Walk with Roland</a></li>
-        <li><a href="#" data-src="/audioStream/King_Pin.mp3">King Pin</a></li>
-        <li><a href="#" data-src="/audioStream/eMastered_Syllable.mp3">Syllable</a></li>
-        <li><a href="#" data-src="/audioStream/eMastered_Red_swallow.mp3">Red Swallow</a></li>
-      </ol>
-      <div class="nextprev">
-        <span class="prev">prev</span>
-        <span class="next">next</span>
-      </div>
-      <span class="btnloop">loop</span>
-    </div>
-  </div>
-</div>
- <script src="vendor/jquery/jquery.min.js"></script>
- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
- <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
- <script src="js/jqBootstrapValidation.js"></script>
- <script src="js/contact_me.js"></script>
-
- <script src="js/agency.min.js"></script>
- <script>
-  Amplitude.init({
-		"songs": [
-			{
-				"name": "Song Name 1",
-				"artist": "Artist Name",
-				"album": "Album Name",
-				"url": "/song/url.mp3",
-				"cover_art_url": "/cover/art/url.jpg"
-			},
-			{
-				"name": "Song Name 2",
-				"artist": "Artist Name",
-				"album": "Album Name",
-				"url": "/song/url.mp3",
-				"cover_art_url": "/cover/art/url.jpg"
-			},
-			{
-				"name": "Song Name 3",
-				"artist": "Artist Name",
-				"album": "Album Name",
-				"url": "/song/url.mp3",
-				"cover_art_url": "/cover/art/url.jpg"
-			}
-		]
-	});
- </script>
-
-</body>
-
-</html> -->
