--- a/scss/components/_player.scss
+++ b/scss/components/_player.scss
@@ -4,116 +4,94 @@
 
 .player-container {
   position: fixed;
-  //top: 100%;
+
   left: 0;
   right: 0;
   z-index: 99;
   bottom: 0;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
   width: 100%;
-  height: 112px;
+  height: 100px;
   background: #151518;
   // overflow: hidden;
-}
-div {
-  &.player {
-    position: relative;
-    box-sizing: border-box;
-    display: inline-flex;
+
+
+
+  .player {
     align-items: center;
-    width: 66%;
+    //width: 66%;
     padding-left: .8rem;
-    margin: auto;
-    margin-top: 0;
-    margin-bottom: 0;
+    padding-top: 4px;
     color: $gray-200;
     background: #151515;
     border-right: 1px solid #252525;
     border-left: 1px solid #252525;
+    height: 100px;
 
     &::after {
       display: table;
       clear: both;
       content: "";
     }
-    .album-art-container {
-      box-sizing: border-box;
-      display: inline-flex;
-      align-items: center;
-      min-width: 24%;
-      padding: .4rem;
+
+
+
+
+
+    .meta-container {
+      padding-right: 1.7rem;
+      // padding-left: .8rem;
+      width: 100%;
+      height: 100px;
       border-right: 1px solid #252525;
-      div {
-        &.song-title {
-          @include body-font;
-          font-size: 1rem;
-          font-weight: 400;
-          color: #fff;
-          text-align: left;
-          text-transform: uppercase !important;
-          .number {
-            margin-left: 2px;
-            font-size: 12px;
-            color: #fed336b0;
-          }
-        }
 
-        &.song-artist {
+      .album-art-container {
+        max-width: 100px;
+        align-items: center;
+        width: 100px;
+        height: 100px;
+        padding: .4rem;
 
-          @include body-font;
-          font-size: 12px;
-          color: #fff;
-          text-align: left;
-        }
       }
-    }
 
-    img {
-      &.album-art {
-        display: inline-flex;
+      .album-art {
         width: 80px;
         height: 80px;
-        margin-right: 10px;
-
       }
-    }
-  }
 
-  &.meta-container {
-    //width: 70%;
-    box-sizing: border-box;
-    display: flex;
-    flex-grow: 1;
-    align-items: center;
-    padding: .4rem;
-    padding-right: 1.7rem;
-    padding-left: 1.7rem;
-    flex-shrink: 1;
-    div {
-      &.song-title {
-        @include body-font;
-        font-size: 22px;
+
+
+
+      .title-artist-container {
+        // width: 120px;
+        align-self: center;
+      }
+
+      .song-title {
+        font-size: 16px;
         font-weight: 400;
         color: #fff;
         text-align: left;
         text-transform: uppercase !important;
+        padding-left: .5rem;
+        overflow:hidden;
+        text-overflow: ellipsis;
       }
 
-      &.song-artist {
-        margin-top: 10px;
+      .song-artist {
+        //flex: none !important;
         font-size: 12px;
         color: #fff;
         text-align: left;
         @include body-font;
+        padding-left: .25rem;
       }
 
-      &.time-container {
+
+
+      .time-container {
         position: absolute;
         top: 20px;
         right: 0px;
-        display: inline-flex;
         height: 16px;
         padding-right: 1.7rem;
         margin-bottom: 10px;
@@ -128,39 +106,50 @@ div {
           content: "";
         }
 
-        div {
-          &.current-time {
-            float: left;
-          }
 
-          &.duration {
-            float: right;
-          }
+        .current-time {
+          float: left;
+        }
+
+        .duration {
+          float: right;
         }
       }
     }
   }
+}
 
-  &.control-container {
+// .player-container .player .meta-container {
+  .control-container {
     display: inline-flex;
+    flex-basis: 170px;
     align-items: center;
-    padding-right: 1rem;
-    text-align: center;
-
-    div {
-      &.amplitude-prev {
-        display: inline-flex;
+    width: 170px;
+    height: 100px;
+    padding-left: 1rem;
+    margin: auto;
+    border-left: 1px solid #252525;
+    .control-wrapper {
+      width: 150px;
+      
+      .amplitude-prev {
+       flex: 1 1 auto;
+       align-self: center;
         width: 28px;
         height: 24px;
         vertical-align: middle;
         cursor: pointer;
-        // background: url("/img/icons/skip-previous.svg");
-        // background-repeat: no-repeat;
+        background: url("/img/icons/previous.svg"); 
+        background-repeat: no-repeat;
+        background-size: 50%;
+        background-position: 50% 50%;
       }
-      &.play-pause-contianer {
-        display: inline-flex;
-        width: 40px;
-        height: 40px;
+
+      .play-pause-contianer {
+        display: flex;
+        align-items: center;
+        width: 50px;
+        height: 50px;
         padding: .4rem;
         vertical-align: middle;
         cursor: pointer;
@@ -168,56 +157,93 @@ div {
         background: -moz-radial-gradient(circle, rgba(61, 61, 61, 1) 20%, rgba(0, 0, 0, 1) 100%);
         background: -webkit-radial-gradient(circle, rgba(61, 61, 61, 1) 20%, rgba(0, 0, 0, 1) 100%);
         background: radial-gradient(circle, rgba(61, 61, 61, 1) 20%, rgba(0, 0, 0, 1) 100%);
-        filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#000000", GradientType=1);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#fec610", GradientType=1);
         border-radius: 50%;
         transition: all 1s ease-in-out;
+
         &:hover {
           background: rgba(254, 200, 16, .29);
           background: -moz-radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
           background: -webkit-radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
           background: radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
-          filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#000000", GradientType=1);
+          filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#fec610", GradientType=1);
           transition: all 1s ease-in-out;
         }
-        &:active, &:focus, &:focus-within {
-          
+        &::after {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          border-radius: 50%;
+          background: #333;
+          transition: all 1s ease-in-out;
         }
+        &:hover:after {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          border-radius: 50%;
+          background: transparent;
+          transition: all 1s ease-in-out;
+        }
+
+        &:active,
+        &:focus,
+        &:focus-within {
+          content: '';
+          background: rgb(254, 198, 16);
+          background: -moz-radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
+          background: -webkit-radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
+          background: radial-gradient(circle, rgba(254, 200, 16, .75) 0%, rgba(254, 200, 16, .29) 100%);
+          filter: progid:dximagetransform.microsoft.gradient(startColorstr="#3d3d3d", endColorstr="#fec610", GradientType=1);
+          transition: all 1s ease-in-out;
+        }
+
         .play-icon-offset {
-          margin-left: -2px;
-          margin-top: -2px;
+          // margin-left: 2px;
+          // margin-top: -2px;
         }
       }
-      &.amplitude-play-pause {
-        display: inline-block;
+
+      .amplitude-play-pause {
         flex: 1 1 auto;
-        align-items: center;
-        justify-items: center;
-        width: 40px;
-        height:450px;
+        align-self: center;
+        width: 28px;
+        height: 28px;
         margin: 0 auto;
         vertical-align: middle;
         text-align: center;
-        /*background: url("/img/icons/play-arrow.svg");
+        background-image: url("/img/icons/play.svg");
+        background-size: 100%;
         background-repeat: no-repeat;
-        background-position: 50% 50%*/
+        background-position: 70% 50%;
+        background-size: 24px 24px;
         cursor: pointer;
 
-        &.amplitude-paused {
+        .amplitude-paused {
           margin-left: 3px;
           /*background: url("/img/icons/play-arrow.svg");
-          background-repeat: no-repeat;
-          background-position: center middle;
-          background-size: 40px;*/
+        background-repeat: no-repeat;
+        background-position: center middle;
+        background-size: 40px;*/
         }
 
-        &.amplitude-playing {
-          // background: url("/img/icons/pause.svg");
+        .amplitude-playing {
+          background: url("/img/icons/pause.svg");
           // background-repeat: no-repeat;
         }
       }
 
-      &.amplitude-next {
-        display: inline-flex;
+      .amplitude-next {
+        flex: 1 1 auto;
+        align-self: center;
         width: 28px;
         height: 24px;
         // margin-left: 75px;
@@ -225,52 +251,62 @@ div {
         // margin-left: 75px;
         vertical-align: middle;
         cursor: pointer;
-        // background: url("/img/icons/skip-next.svg");
+        background-image: url("/img/icons/next.svg");
+        background-repeat: no-repeat;
+        background-size: 50%;
+        background-position: 50% 50%;
       }
     }
   }
-}
-
+  .progress-container {
+    width: 100%;
+    height: 100px;
+    progress {
+      flex: 1 1 auto;
+      align-self: center;
+    }
+  }
+// }
 /*
   Small only
 */
-@media screen and (max-width: 39.9375em) {
-  div.control-container div.amplitude-prev {
-    margin-right: 10px;
+// @media screen and (max-width: 39.9375em) {
+//   .control-container .amplitude-prev {
+//     margin-right: 10px;
 
-  }
+//   }
 
-  div.control-container div.amplitude-next {
-    margin-left: 10px;
+//   .control-container .amplitude-next {
+//     margin-left: 10px;
 
-  }
-}
+//   }
+// }
 
-/*
-  Medium only
-*/
-@media screen and (min-width: 40em) and (max-width: 63.9375em) {
-  div.control-container div.amplitude-prev {
-    margin-right: 10px;
-  }
+// /*
+//   Medium only
+// */
+// @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+//   .control-container .amplitude-prev {
+//     margin-right: 10px;
+//   }
 
-  div.control-container div.amplitude-next {
-    margin-left: 10px;
-  }
-}
+//   .control-container .amplitude-next {
+//     margin-left: 10px;
+//   }
+// }
 
-/*
-  Large Only
-*/
-@media screen and (min-width: 64em) {
-  div.control-container div.amplitude-prev {
-    margin-right: 10px;
-  }
+// /*
+//   Large Only
+// */
+// @media screen and (min-width: 64em) {
+//   .control-container .amplitude-prev {
+//     margin-right: 10px;
+//   }
 
-  div.control-container div.amplitude-next {
-    margin-left: 10px;
-  }
-}
+//   .control-container .amplitude-next {
+//     margin-left: 10px;
+//   }
+// }
 
 progress {
   &.amplitude-song-played-progress {
