--- a/scss/crankfish.scss
+++ b/scss/crankfish.scss
@@ -13,6 +13,7 @@
 @import "components/loader-pace";
 
 // Layout
+@import "layout/grid";
 @import "layout/masthead";
 @import "layout/services";
 @import "layout/portfolio";
