--- a/styles/scss/pace.scss
+++ b/styles/scss/pace.scss
@@ -1,61 +1,135 @@
-#isItLoaded {
+//colors
+$black: #000;
+$color_lonestar_approx: #6c0000;
 
-  display: none;
-
-  .pace-running .loading-overlay {}
-
-  #loading {
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    display: flex;
-    right: 0;
-    flex-flow: row nowrap;
-    bottom: 0;
-    justify-content: center;
-    left: 0;
-    align-items: center;
-    z-index: 101;
-    width: 100%;
-    width: 100%;
-    height: 90vh;
-    height: 100vh;
-    background: #000;
-    opacity: 1;
-    overflow: hidden;
-    transition: all .35s ease-in-out;
-  }
-
-  .pace-done .loading-overlay {
-    width: 0px;
-    height: 0px;
-    display: none;
-    overflow: hidden;
-    opacity: 0;
-    transition: all .35s ease-in-out;
-  }
+//@extend-elements
+//original selectors
+//.pace-done .pace-progress, .pace-done .loading-overlay
+%extend_1 {
+	width: 0;
+	height: 0;
+	display: none;
+	overflow: hidden;
+	opacity: 0;
+	//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+	transition: all .35s ease-in-out;
 }
 
-.pace-running .loading-overlay>.loading-logo {
-  display: inline-block;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  margin: auto;
-  z-index: 102;
-  transform: translate(-50%, -60%);
-  transition: opacity .35s ease-in-out;
-}
 
-.pace-done .loading-overlay>.loading-logo {
-  opacity: 0;
-  position: absolute;
-  bottom: -300px;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: opacity .35s ease-in-out;
+.loading-overlay {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1999;
 }
-
+.pace-done {
+	.pace-progress {
+		@extend %extend_1;
+	}
+	.loading-overlay {
+		@extend %extend_1;
+	}
+	.pace.pace-inactive {
+		display: none;
+		opacity: 0;
+	}
+}
 .fixed-top {
-  z-index: 90 !important;
+	z-index: 90 !important;
+}
+.pace {
+	-webkit-pointer-events: none;
+	pointer-events: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	//Instead of the line below you could use @include user-select($select)
+	user-select: none;
+	z-index: 2000;
+	position: fixed;
+	height: 90px;
+	width: 90px;
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	.pace-activity {
+		z-index: 2000;
+		position: absolute;
+		left: -30px;
+		top: -30px;
+		height: 90px;
+		width: 90px;
+		display: block;
+		border-width: 30px;
+		border-style: double;
+		border-color: $color_lonestar_approx transparent transparent;
+		//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+		border-radius: 50%;
+		-webkit-animation: spin 1s linear infinite;
+		-moz-animation: spin 1s linear infinite;
+		-o-animation: spin 1s linear infinite;
+		animation: spin 1s linear infinite;
+		&:before {
+			content: ' ';
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			height: 50px;
+			width: 50px;
+			display: block;
+			border-width: 10px;
+			border-style: solid;
+			border-color: $color_lonestar_approx transparent transparent;
+			//Instead of the line below you could use @include border-radius($radius, $vertical-radius)
+			border-radius: 50%;
+		}
+	}
+	&.pace-inactive .pace-activity {
+		display: none;
+	}
+}
+@-webkit-keyframes spin {
+	100% {
+		-webkit-transform: rotate(359deg);
+	}
+}
+@-moz-keyframes spin {
+	100% {
+		-moz-transform: rotate(359deg);
+	}
+}
+@-o-keyframes spin {
+	100% {
+		-moz-transform: rotate(359deg);
+	}
+}
+@keyframes spin {
+	100% {
+		//Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
+		transform: rotate(359deg);
+	}
+}
+.pace-running .loading-overlay {
+	width: 100%;
+	height: 100vh;
+	background: $black;
+	opacity: 1;
+	overflow: hidden;
+	//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+	transition: all .35s ease-in-out;
+	> .loading-logo {
+		display: inline-block;
+		position: absolute;
+		top: 60%;
+		left: 50%;
+		margin: auto;
+		z-index: 102;
+		//Instead of the line below you could use @include transform($scale, $rotate, $transx, $transy, $skewx, $skewy, $originx, $originy)
+		transform: translate(-50%, -60%);
+		//Instead of the line below you could use @include transition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
+		transition: opacity .35s ease-in-out;
+	}
 }
